crates/tsuno-driver/tests/fixtures/snapshots/pass/rejects_open_mutable_reference_on_storage_dead.rs
fn opaque(_: &mut i32) {}

fn bad_scope(mut x: i32) {
    {
        let r = &mut x;
        opaque(r);
    }
}

fn main() {}
