crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_symbolic_i32_add_overflow.rs
fn rejects_symbolic_i32_add_overflow(x: i32) {
    let _y = x + 1;
}

fn main() {}
